fix container spacings

--- a/src/components/styles/Market.module.scss
+++ b/src/components/styles/Market.module.scss
@@ -2,8 +2,7 @@
   background-color: #2b343e;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  width: calc(100% - 190px);
-  margin: 10px;
+  width: calc(100% - 175px);
   padding: 10px 0;
 }
 
