--- a/src/components/styles/Watchlist.module.scss
+++ b/src/components/styles/Watchlist.module.scss
@@ -4,7 +4,7 @@
   right: 0;
   top: 60px;
   width: 160px;
-  margin: 10px;
+  margin: 15px;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding-bottom: 20px;
@@ -36,6 +36,6 @@
   .watchlist {
     position: revert;
     width: revert;
-    margin: 0 10px;
+    margin: 15px 0;
   }
 }
