--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,12 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-body {
+html {
+  height: 100%;
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
